# tymtLauncher

./: .env.dev  README.md  config-overrides.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
public/: index.html
src/: App.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: discord.rs  downloads.rs  main.rs
src/app/: launcher.ts  store.ts
src/configs/: index.ts
src/games/: Default.tsx  GamePage.tsx
src/games/district53/: District53.tsx
src/games/district53/pages/: Auctions.tsx  LandMap.tsx  ServerList.tsx
src/lib/api/: ChatAPI.js  Downloads.ts  Games.tsx  Rosetta.ts  SolarAPI.ts  types.ts
src/lib/core/: AES.ts  ChatContact.ts  ChatHistory.ts  Contact.ts  Core.ts  TymtCore.ts  Wallet.ts
src/lib/store/: appSlice.ts  chatSlice.ts  currentGameSlice.ts  gameSlice.ts  searchSlice.ts  sessionSlice.ts  walletSlice.ts
src/lib/translations/: en.ts  i18n.ts
src/lib/wallets/: Arbitrum.ts  Avalnche.ts  BSC.ts  Bitcoin.ts  Dogecoin.ts  Ethereum.ts  IWallet.ts  Optimism.ts  Polygon.ts  Solana.ts  Solar.ts  Wallets.ts
src/pages/: Catalog.tsx  Chat.tsx  Downloads.tsx  HomeView.tsx  Library.tsx  Login.tsx  SessionView.tsx  WalletView.tsx
src/pages/chat/: Messages.tsx  SendMessage.tsx  UserList.tsx
src/pages/components/: Button.tsx  Loading.tsx  Navbar.tsx  ProfileSelector.tsx
src/pages/components/wallet/: AddressInput.tsx  FeeInput.tsx  Recipients.tsx  SolarTxType.tsx  WalletTransactions.tsx
src/pages/wallet/: Create.tsx  Import.tsx  Receive.tsx  Send.tsx  Staking.tsx
