[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
assert2 = "0.3.6"
tauri = { version = "1.1.1", features = [ "http-all", "window-all", "path-all", "fs-create-dir", "fs-read-dir", "shell-open", "fs-write-file", "fs-copy-file", "os-all", "protocol-asset", "fs-rename-file", "fs-read-file", "dialog-all", "clipboard-all", "shell-execute", "devtools"] }
reqwest = { version = "0.11"}
zip = "*"
zip-extensions = "*"

[dependencies.tauri-plugin-fs-watch]
git = "https://github.com/tauri-apps/tauri-plugin-fs-watch"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
